--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ember-resize",
-  "version": "0.0.16",
+  "name": "ember-resize-udpated",
+  "version": "1.0.0",
   "description": "Idiomatically handle window and view resizes in Ember.js",
   "directories": {
     "doc": "doc",
@@ -15,9 +15,9 @@
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
-  "repository": "https://github.com/mike-north/ember-resize.git",
-  "homepage": "https://github.com/mike-north/ember-resize",
-  "author": "Mike North <michael.l.north@gmail.com> (http://mike.works)",
+  "repository": "https://github.com/mrfisher8432/ember-resize.git",
+  "homepage": "https://github.com/mrfisher8432/ember-resize",
+  "author": "Michael Fisher <mrfisher@me.com>",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
@@ -51,7 +51,6 @@
     "ember-cli-htmlbars": "^2.0.3"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config",
-    "demoURL": "http://mike.works/ember-resize"
+    "configPath": "tests/dummy/config"
   }
 }
